--- a/website/src/styles/index.css
+++ b/website/src/styles/index.css
@@ -12,6 +12,7 @@ span code {
 h1,
 h2,
 h3,
+h4,
 li,
 p,
 span,
@@ -43,6 +44,9 @@ h2 {
 }
 h3 {
   font-size: 1.35rem;
+}
+h4 {
+  font-size: 1.15rem;
 }
 
 p,
